kubernetes/deploy/ingress/http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openim-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: openim-api.localtest.me
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: openim-api-service
                port:
                  number: 10002
          - path: /msg_gateway/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: messagegateway-rpc-service
                port:
                  number: 10001
